[project]
name = "cpfeed"
version = "0.8.0"
description = "CLI to check out current prices of cryptocurrencies. Powered by CoinGecko."
requires-python = ">= 3.9"
authors = ["0xBitzz"]
readme = "README.md"
license = "MIT"
keywords = [
    "console",
    "CLI",
]

[project.dependencies]
typer = { extras = ["all"], version = "^0.9.0" }
requests = "^2.31.0"

[project.urls]
homepage = "https://github.com/0xBitzz/cpfeed/"
repository = "https://github.com/0xBitzz/cpfeed.git"

[project.scripts]
cpfeed = "cpfeed.cpf:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
twine = "5.0.0"
